--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <li>git clone path to repositore</li>
         <li>git - status</li>
         <li>git add path to file</li>
-        <li>git comitt added new file</li>
+        <li>git commit -am "added new file index.html</li>
     </ul>
 </div>
 
