--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
         <li>git - status</li>
         <li>git add path to file</li>
         <li>git commit -am "added new file index.html</li>
+        <li>git push</li>
+        <li>git pull</li>
     </ul>
 </div>
 
