--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
         <li>git pull</li>
     </ul>
 </div>
+
+<div>
+    <ul>
+        <li>git --rm cached index.html - - - - - перестати слідкувати за файлом, index.html - назва файла</li>
+    </ul>
+</div>
 </body>
 
 </html>
