--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
 <div>
     <ul>
         <li>git --rm cached index.html - - - - - перестати слідкувати за файлом, index.html - назва файла</li>
+        <li>git ignore - - - - - не вносяться зміни в гіт, але всеодно гітігноре треба добавлять</li>
+        <li>git branch test - - - - створення нової вєтки, а тест це ім'я</li>
+        <li>git branch -D test - - - - - видалення вєтки під назвоб тест</li>
+        <li>git checkout test - - - - - вхід у вєтку тест</li>
+        <li> git checkout master - - - - назад переключиться</li>
     </ul>
 </div>
 </body>
